--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-  <title>feverdestiny</title>
+  <title>Destiny</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <meta name="description" content=""/>
   <meta name="keywords" content=""/>
@@ -17,7 +17,6 @@
   <link href="views/css/bootstrap.css" rel="stylesheet"/>
   <link href="views/css/animate.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="views/css/style.css"/>
-
   <link href="views/css/loading.css" rel="stylesheet"/>
   <script src="views/js/jquery.min.js"></script>
   <script src="views/js/tether.js"></script>
@@ -50,9 +49,13 @@
     <header id="header" style="min-height: 330px;">
       <h1 style="font-family: 'Microsoft YaHei UI'">Fever Destiny</h1>
       <p style="font-family: 'Microsoft YaHei UI'"> Learning-by-doing</p>
-      <div>
-        <div style="width:30%;margin-left: auto;margin-right: auto;min-width:200px;" id="divlog">
-          <button class="btn btn-block btn-success" id="btnLog">登录</button>
+      <div id="MainLogin">
+        <div style="width:30%;margin-left: auto;margin-right: auto;min-width:200px;" >
+          <div id="divlog">
+            <button class="btn btn-block btn-success" id="btnLog">登录</button>
+            <button class="btn btn-block btn-outline-secondary" id="btnRegister">注册</button>
+          </div>
+
           <form style="margin-bottom: 20px;display: none" id="formlog">
             <div class="input-group input-group-md">
               <input id="username" type="text" class="form-control" placeholder="账号"
@@ -68,6 +71,28 @@
         </div>
       </div>
 
+      <div id="RegetierLogin" style="display: none;">
+        <div style="width:30%;margin-left: auto;margin-right: auto;min-width:200px;" >
+
+
+          <form style="margin-bottom: 20px;" >
+            <div class="input-group input-group-md">
+              <input id="Rusername" type="text" class="form-control" placeholder="请输入账号"
+                     aria-describedby="sizing-addon1">
+            </div>
+            <div class="input-group input-group-md" style="margin-top:5px;">
+              <input id="Ruserpassword1" type="password" class="form-control" placeholder="请输入密码"
+                     aria-describedby="sizing-addon1">
+            </div>
+            <div class="input-group input-group-md" style="margin-top:5px;">
+              <input id="Ruserpassword2" type="password" class="form-control" placeholder="请再次密码"
+                     aria-describedby="sizing-addon1">
+            </div>
+          </form>
+          <button class="btn btn-block btn-success" id="RbtnLog" >注册</button>
+
+        </div>
+      </div>
     </header>
 
     <!-- Footer -->
