--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,12 +17,16 @@
   <link href="views/css/bootstrap.css" rel="stylesheet"/>
   <link href="views/css/animate.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="views/css/style.css"/>
+  <link rel="stylesheet" href="views/css/sweet-alert.css"/>
+
   <link href="views/css/loading.css" rel="stylesheet"/>
   <script src="views/js/jquery.min.js"></script>
   <script src="views/js/tether.js"></script>
   <script src="views/js/bootstrap.js"></script>
   <script src="views/js/skel.min.js"></script>
   <script src="views/js/init.js"></script>
+  <script src="views/js/common.js"></script>
+  <script src="views/js/sweet-alert.js"></script>
   <script src="views/js/indexView.js"></script>
   <noscript>
 
