--- a/public/views/echartsDemo.html
+++ b/public/views/echartsDemo.html
@@ -76,7 +76,7 @@
         title:{
             text:'Pie图'
         },
-        backgroundColor:'#2c343c',
+        backgroundColor: 'rgba(255, 255, 255, 0.1)',
         textStyle:{
             color:'rgba(255, 255, 255, 0.3)'
         },
