--- a/public/views/weather.html
+++ b/public/views/weather.html
@@ -9,7 +9,7 @@
     <script src="../views/js/bootstrap.js"></script>
     <link href="../views/css/weatherCss.css" rel="stylesheet">
     <script src="../views/js/weatherView.js"></script>
-    <script src="views/js/echarts.js"></script>
+    <script src="views/js/echarts.min.js"></script>
     <style>
         ul {
             list-style: none;
