--- a/public/views/wangeditor.html
+++ b/public/views/wangeditor.html
@@ -5,7 +5,14 @@
     <title>文本编辑器</title>
     <link href="../views/css/bootstrap.css" rel="stylesheet"/>
     <link href="views/wangEditor/css/wangEditor.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="views/css/sweet-alert.css"/>
+    <script src="views/js/jquery.min.js"></script>
+    <script src="views/js/tether.js"></script>
+    <script src="views/js/bootstrap.js"></script>
+    <script src="views/js/common.js"></script>
+    <script src="views/js/sweet-alert.js"></script>
+    <script src="views/wangEditor/js/wangEditor.js"></script>
+    <script src="views/js/wangeditorView.js"></script>
 </head>
 <body>
 
@@ -18,7 +25,6 @@
                    aria-describedby="sizing-addon1"
                    style="font-size: 20px;font-weight: 100">
         </div>
-
     </div>
     <div class="row" style="margin-top: 20px;">
         <textarea id="documentContent" style="min-height:450px; ">
@@ -30,15 +36,15 @@
             <button class="btn btn-block btn-success" id="documentSave">保存</button>
         </div>
     </div>
+    <div class="row " style="margin-top: 10px">
+        <div class="col-md-4 offset-md-4">
+            <button class="btn btn-block btn-success" id="getDocumentTitle">获取</button>
+        </div>
+    </div>
 </div>
 
 
 </body>
 
-<script src="views/js/jquery.min.js"></script>
-<script src="views/js/tether.js"></script>
-<script src="views/js/bootstrap.js"></script>
-<script src="views/wangEditor/js/wangEditor.js"></script>
-<script src="views/js/sweet-alert.js"></script>
-<script src="views/js/wangeditorView.js"></script>
+
 </html>
