--- a/public/views/weather.html
+++ b/public/views/weather.html
@@ -7,6 +7,7 @@
     <script src="../views/js/jquery.min.js"></script>
     <script src="../views/js/tether.js"></script>
     <script src="../views/js/bootstrap.js"></script>
+    <script src="views/js/common.js"></script>
     <link href="../views/css/weatherCss.css" rel="stylesheet">
     <script src="../views/js/weatherView.js"></script>
     <script src="views/js/echarts.min.js"></script>
